src/test/deca/context/valid/sansObjet/FloatAffectation2.deca
{
    float x = 2020.0f;
    x = 100.1f;
    print(x);
}