src/test/deca/context/invalid/object/reDefinitionMethodLikeField.deca
class A
{
  float b;
}

class B extends A
{
  float b(){}
}
